tests/negative/regression/r9.orng
let x : 2 ( ) % & mut ? fn main ( ) -> unreachable { }